// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should match snapshot 1`] = `
<t-divider>
  <mock:shadow-root>
    <div class="divider">
      <hr class="divider__horizontal">
    </div>
  </mock:shadow-root>
</t-divider>
`;

exports[`Divider should match snapshot when horizontal false 1`] = `
<t-divider horizontal="false">
  <mock:shadow-root>
    <div class="divider">
      <span class="divider__vertical"></span>
    </div>
  </mock:shadow-root>
</t-divider>
`;
